建立views文件夹

--- a/views/resume.html
+++ b/views/resume.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>resume</title>
-    <link href="css/reset.css" rel="stylesheet">
-    <link href="css/resume.css" rel="stylesheet">
+    <link href="../css/reset.css" rel="stylesheet">
+    <link href="../css/resume.css" rel="stylesheet">
 </head>
 <body>
 <section class="main">
@@ -85,7 +85,7 @@
     </section>
 
 </section>
-<script src="js/vue.js"></script>
+<script src="../js/vue.js"></script>
 <script>
     var vm = new Vue({
         el: '.main',
