--- a/views/resume.html
+++ b/views/resume.html
@@ -85,7 +85,7 @@
     </section>
 
 </section>
-<script src="../js/vue.js"></script>
+<script src="../library/vue.js"></script>
 <script>
     var vm = new Vue({
         el: '.main',
