第一章完成

--- a/views/three-demo-1-1.html
+++ b/views/three-demo-1-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>BadWaka</title>
+    <title>1-1 正方体</title>
     <style>
         html, body, canvas {
             margin: 0;
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-<script src="library/three/three.js"></script>
+<script src="../library/three/three.js"></script>
 <script>
     // 场景
     var scene = new THREE.Scene();
