--- a/views/three/three-demo-1-1.html
+++ b/views/three/three-demo-1-1.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-<script src="../library/three/three.js"></script>
+<script src="../../library/three/three.js"></script>
 <script>
     // 场景
     var scene = new THREE.Scene();
