--- a/views/three/three-demo-1-2.html
+++ b/views/three/three-demo-1-2.html
@@ -22,7 +22,7 @@
 </head>
 <body onload="threeStart()">
 <div id="canvas-frame"></div>
-<script src="../library/three/three.js"></script>
+<script src="../../library/three/three.js"></script>
 <script>
     var renderer;
 
