--- a/views/three/three-demo-3-1.html
+++ b/views/three/three-demo-3-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>3-1</title>
+    <title>3-1 移动照相机</title>
     <style>
         html, body, canvas {
             margin: 0;
