--- a/views/h5_preview_edit.html
+++ b/views/h5_preview_edit.html
@@ -23,6 +23,13 @@
         <div :class="left.text.class" @click="textClick">
             {{left.text.text}}
         </div>
+        <!--列表-->
+        <ul class="list">
+            <!--项-->
+            <li class="item">
+                
+            </li>
+        </ul>
     </section>
 
     <!--右侧-->
