--- a/stylesheets/h5_preview_edit.less
+++ b/stylesheets/h5_preview_edit.less
@@ -4,7 +4,7 @@ html, body {
 
 .border {
   box-sizing: border-box;
-  border: 1px solid red;
+  box-shadow: 0 0 0 2px red;
 }
 
 .app {
@@ -14,6 +14,7 @@ html, body {
 
   // 预览
   .preview {
+    padding: 20px;
     width: 300px;
     height: 600px;
     border: 1px solid #000;
