--- a/views/h5_preview_edit.html
+++ b/views/h5_preview_edit.html
@@ -27,7 +27,7 @@
         <ul class="list">
             <!--项-->
             <li class="item">
-                
+
             </li>
         </ul>
     </section>
@@ -53,6 +53,7 @@
                     img: {
                         // 类
                         class: {
+                            pointer: true,
                             img: true,
                             border: false,
                         },
@@ -60,6 +61,7 @@
                     },
                     text: {
                         class: {
+                            pointer: true,
                             text: true,
                             border: false,
                         },
