--- a/stylesheets/h5_preview_edit.less
+++ b/stylesheets/h5_preview_edit.less
@@ -7,6 +7,10 @@ html, body {
   box-shadow: 0 0 0 2px red;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 .app {
   display: flex;
   padding: 30px;
@@ -17,6 +21,7 @@ html, body {
     padding: 20px;
     width: 300px;
     height: 600px;
+    box-sizing: border-box;
     border: 1px solid #000;
     overflow: auto;
 
