--- a/stylesheets/h5_preview_edit.less
+++ b/stylesheets/h5_preview_edit.less
@@ -1,5 +1,10 @@
-html, body {
+html, body, ul, ol {
   margin: 0;
+  padding: 0;
+}
+
+ul, ol {
+  list-style: none;
 }
 
 .border {
@@ -31,11 +36,20 @@ html, body {
       background: no-repeat center;
       background-size: cover;
     }
+
+    .list {
+
+      .item {
+        cursor: pointer;
+      }
+    }
   }
 
   // 右侧
   .right {
     margin-left: 50px;
+    padding: 20px;
+    box-sizing: border-box;
     width: 300px;
     height: 600px;
     border: 1px solid #000;
