--- a/static/pages/maxine/maxine.less
+++ b/static/pages/maxine/maxine.less
@@ -3,5 +3,38 @@ html, body {
 }
 
 .header {
-    
+    display: flex;
+    align-items: center;
+    height: 100px;
+
+    .img-left {
+        margin-left: 100px;
+        width: 50px;
+        height: 50px;
+        background: center no-repeat;
+        background-size: cover;
+        border-radius: 50%;
+    }
+
+    .right {
+        margin-left: 10px;
+        text-align: center;
+
+        .title {
+            font-size: 24px;
+        }
+
+        .sub-title {
+            font-size: 14px;
+        }
+    }
+}
+
+.tabs {
+    display: flex;
+    justify-content: center;
+
+    .tab-item {
+        height: 40px;
+    }
 }
