--- a/static/pages/maxine/maxine.less
+++ b/static/pages/maxine/maxine.less
@@ -33,8 +33,39 @@ html, body {
 .tabs {
     display: flex;
     justify-content: center;
+    border-top: 1px solid #555;
+    border-bottom: 1px solid #555;
+    box-sizing: border-box;
 
     .tab-item {
         height: 40px;
+        line-height: 40px;
+        width: 100px;
+        color: #555;
+        text-align: center;
+        cursor: pointer;
+        transition: .5s;
+        border-left: 1px solid #555;
+        box-sizing: border-box;
+
+        &:hover {
+            background: #555;
+            color: #fff;
+        }
+
+        &:last-child {
+            border-right: 1px solid #555;
+        }
+    }
+}
+
+.swiper-container {
+    height: 500px;
+
+    .swiper-slide {
+        width: 100%;
+        height: 100%;
+        background: center no-repeat;
+        background-size: cover;
     }
 }
