--- a/static/pages/maxine/maxine.less
+++ b/static/pages/maxine/maxine.less
@@ -21,7 +21,6 @@ html, body {
 
   .right {
     margin-left: 20px;
-    text-align: center;
 
     .title {
       font-size: 28px;
@@ -92,6 +91,69 @@ html, body {
 
 }
 
+// 菜单页
+.menu {
+
+  .big-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 500px;
+    background: center no-repeat;
+    background-size: cover;
+
+    .area {
+      padding: 80px 40px;
+      border: 4px solid #fff;
+      color: #fff;
+      text-align: center;
+
+      .title {
+        font-size: 40px;
+      }
+
+      .sub-title {
+        margin-top: 10px;
+      }
+    }
+  }
+
+  .middle-img {
+    width: 100%;
+    height: 500px;
+    background: center no-repeat;
+    background-size: cover;
+  }
+
+  .foods {
+
+    .food-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px 160px;
+
+      .divider {
+        position: relative;
+        top: 24px;
+        width: 100%;
+        height: 1px;
+        background: @primaryColor;
+      }
+
+      .title {
+        padding: 0 20px;
+        margin-bottom: 20px;
+        color: @primaryColor;
+        background: #fff;
+        font-size: 46px;
+        z-index: 2;
+      }
+    }
+  }
+}
+
 // footer
 .footer {
   padding: 100px 200px;
@@ -111,9 +173,9 @@ html, body {
 }
 
 // 卡片
-.video-card, .news-card, .history-card {
+.video-card, .news-card, .img-content-card {
   margin: 0 auto;
-  padding: 60px 200px;
+  padding: 80px 200px;
   background: #fff;
   color: @primaryColor;
   text-align: center;
@@ -157,7 +219,13 @@ html, body {
     margin-top: 40px;
 
     .img-item {
+      transition: 0.5s;
       margin: 0 10px;
+      cursor: pointer;
+
+      &:hover {
+        opacity: .5;
+      }
 
       .img {
         width: 300px;
@@ -177,7 +245,34 @@ html, body {
   }
 }
 
-// 历史卡
-.history-card {
+// 图文卡
+.img-content-card {
 
+  .wrapper {
+    display: flex;
+    background: #F0F0EE;
+
+    .img-left {
+      flex-shrink: 0;
+      width: 300px;
+      height: 500px;
+      background: center no-repeat;
+      background-size: cover;
+    }
+
+    .right {
+      margin-left: 50px;
+      text-align: left;
+
+      .title {
+        margin-top: 150px;
+      }
+
+      .content {
+        padding-right: 40px;
+        margin-top: 40px;
+        line-height: 30px;
+      }
+    }
+  }
 }
