--- a/src/style.css
+++ b/src/style.css
@@ -137,3 +137,12 @@ table {
 a {
     text-decoration: none;
 }
+
+html, body {
+    height: 100%;
+}
+
+.app {
+    background-color: #f5f5f5;
+    height: 100%;
+}
